--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/FT.png" />
+    <meta name="google-site-verification" content="VzAbZtkIARe_3pztevRANZ30JkJrHaiYXFe1jS9pOjA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forza Tuner Box</title>
   </head>
